# warehouse-service-test-task

./: .editorconfig  Dockerfile  Makefile  README.md  TASK_README.md  dashboard.json  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py  openapi.json  run_producer.py
app/api/: main.py
app/api/routes/: __init__.py  health.py  metrics.py  movements.py  warehouses.py
app/cache/: warehouse_redis.py
app/config/: __init__.py  config.py
app/db/: db.py
app/kafka/: consumer.py  metrics.py  producer.py
app/logger/: __init__.py
app/models/: movement.py
app/services/: warehouse.py
app/tests/: test_consume.py
configs/: postgresql.conf  prometheus.yml
